<resources>
    <string name="app_name">Garbage Collector</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- General -->
    <string name="name_ru">Имя пользователя</string>
    <string name="password_ru">Пароль</string>
    <string name="country_ru">Страна</string>
    <string name="add_ru">Добавить</string>
    <string name="save_ru">Сохранить</string>

    <!-- Login and Register -->
    <string name="sign_in_ru">Вход</string>
    <string name="remember_me_ru">Запомнить меня</string>
    <string name="start_registration_ru">Зарегистрируйтесь</string>
    <string name="finish_registration_ru">Зарегистрироваться</string>
    <string name="do_not_have_account_ru">Ещё нет аккаунта?</string>

    <!-- Cleaning -->
    <string name="cleaning_title_ru">Уборка</string>
    <string name="mark_ru">Отметить</string>
    <string name="clean_ru">Убрать</string>
    <string name="underlined_clean_ru"><u>Убрать</u></string>
    <string name="underlined_mark_ru"><u>Отметить</u></string>
    <string name="your_place_list_ru">Ваш список мест</string>

    <!-- Leaderboard -->
    <string name="leaderboard_title_ru">Рейтинг</string>

    <!-- Shop -->
    <string name="shop_title_ru">Магазин</string>
    <string name="partners_ru">Наши партнёры</string>
    <string name="got_ru">Понятно</string>
    <string name="partners_info_ru">Наши партнёры - это список компаний, которые готовы предоставить вам товары или услуги за деньги на вашем аккаунте. 1 монета Garbage Collector = 1 рублю. Эти монеты вы получаете каждый раз, когда убираете место.</string>


    <!-- User -->
    <string name="user_title_ru">Профиль</string>
    <string name="log_out_ru">Выйти</string>
    <string name="edit_profile_ru"><u>Редактировать профиль</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>