<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="70"
            android:gravity="center"
            android:text="Garbage\nCollector"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="30"
            android:background="@drawable/login_field"
            android:hint="@string/name_ru"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="30"
            android:background="@drawable/login_field"
            android:hint="@string/password_ru"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp">

            <ImageView
                android:id="@+id/checkbox_remember"
                android:layout_marginTop="3dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_empty_checkbox"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me_ru"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="6dp"
                android:textSize="16sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="30"
            android:background="@drawable/button_background"
            android:text="@string/sign_in_ru"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/incorrect_login_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="10"
            android:textColor="@color/red"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_marginTop="120dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/do_not_have_account_ru"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_registration"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/start_registration_ru"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>
</FrameLayout>