<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_edit_user"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_logout"
                android:text="@string/edit_profile_ru"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/user_photo"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_weight="1"
        android:text="@string/password_ru"
        android:textSize="16sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_weight="1"
        android:text="@string/country_ru"
        android:textSize="16sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_country"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="300dp"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="Россия" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/btn_logout"
        android:text="@string/log_out_ru"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>